--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carbon Footprint Calculator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -51,6 +48,20 @@
                         </form>
                     </div>
                 </div>
+
+                <div class="card mt-5">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-6">
+                                <canvas id="energyBarChart"></canvas>
+                            </div>
+                            <div class="col-6">
+                                <canvas id="energyStackedChart"></canvas>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="tab-pane fade" id="waste" role="tabpanel" aria-labelledby="waste-tab">
                 <div class="card mt-4">
@@ -72,6 +83,20 @@
                         </form>
                     </div>
                 </div>
+
+                <div class="card mt-5">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-6">
+                                <canvas id="energyBarChart"></canvas>
+                            </div>
+                            <div class="col-6">
+                                <canvas id="energyStackedChart"></canvas>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="tab-pane fade" id="travel" role="tabpanel" aria-labelledby="travel-tab">
                 <div class="card mt-4">
@@ -92,20 +117,27 @@
                         </form>
                     </div>
                 </div>
+                <div class="card mt-8">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-6">
+                                <canvas id="energyBarChart"></canvas>
+                            </div>
+                            <div class="col-6">
+                                <canvas id="energyStackedChart"></canvas>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
-
-
-
-
-
-        <!-- Results Section -->
-        <div class="mt-5">
-            <h3>Results</h3>
-            <div id="resultsGrid" class="row"></div>
-        </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="chart.js"></script>
     <script src="script.js"></script>
 </body>
 
